# gtk

./: meson.build  meson_options.txt
gdk/: gdkconfig.h.meson  gdkdisplaymanager.c  meson.build
gdk/linuxfb/: TODO.linuxfb  gdk-3.0.vapi  gdkcursor-linuxfb.c  gdkdevice-linuxfb.c  gdkdevice-linuxfb.h  gdkdevicemanager-linuxfb.c  gdkdevicemanager-linuxfb.h  gdkdisplay-linuxfb.c  gdkdisplay-linuxfb.h  gdkdisplay-linuxfb.vala  gdkdnd-linuxfb.c  gdkeventsource.c  gdkeventsource.h  gdkeventsource.vala  gdkglobals-linuxfb.c  gdkkeys-linuxfb.c  gdklinuxfb.h  gdklinuxfbcursor.h  gdklinuxfbdisplay.h  gdklinuxfbmonitor.h  gdklinuxfbvisual.h  gdklinuxfbwindow.h  gdkmonitor-linuxfb.c  gdkmonitor-linuxfb.h  gdkprivate-linuxfb.h  gdkproperty-linuxfb.c  gdkscreen-linuxfb.c  gdkscreen-linuxfb.h  gdkselection-linuxfb.c  gdktestutils-linuxfb.c  gdkvisual-linuxfb.c  gdkwindow-linuxfb.c  gdkwindow-linuxfb.h  linuxfb-buffer.c  linuxfb-buffer.h  linuxfb-output.c  linuxfb-output.h  meson.build
gtk/: gtkclipboard.c  gtkimmodule.c  gtkselection.c  gtksettings.c  gtkwindow.c
gtk/inspector/: general.c
tests/: testsocket_common.c
